--- a/OnlineTutor2/Views/Calendar/Index.cshtml
+++ b/OnlineTutor2/Views/Calendar/Index.cshtml
@@ -108,6 +108,7 @@
 @section Scripts {
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/locales/ru.global.min.js'></script>
+    <script src="~/js/layout.js" asp-append-version="true"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
