--- a/OnlineTutor2/Views/SpellingTest/ImportQuestions.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/ImportQuestions.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineTutor2.ViewModels.QuestionImportViewModel
+﻿@model OnlineTutor2.ViewModels.SpellingQuestionImportViewModel
 @{
     ViewData["Title"] = "Импорт вопросов";
     var test = ViewBag.Test as OnlineTutor2.Models.SpellingTest;
