--- a/OnlineTutor2/Views/SpellingTest/Create.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Create.cshtml
@@ -77,7 +77,7 @@
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label asp-for="MaxAttempts" class="form-label">
-                                    <i class="fas fa-redo"></i> Максимальное количество попыток
+                                    <i class="fas fa-redo"></i> Количество попыток
                                 </label>
                                 <input asp-for="MaxAttempts" class="form-control" type="number" min="1" max="10" />
                                 <span asp-validation-for="MaxAttempts" class="text-danger"></span>
