--- a/OnlineTutor2/Views/Test/OrthoeopyTests.cshtml
+++ b/OnlineTutor2/Views/Test/OrthoeopyTests.cshtml
@@ -70,7 +70,7 @@ else
                         <div class="row text-center mb-3">
                             <div class="col-4">
                                 <div class="d-flex flex-column">
-                                    <span class="h6 text-success mb-0">@test.Questions.Count</span>
+                                    <span class="h6 text-success mb-0">@test.OrthoeopyQuestions.Count</span>
                                     <small class="text-muted">вопросов</small>
                                 </div>
                             </div>
@@ -82,7 +82,7 @@ else
                             </div>
                             <div class="col-4">
                                 <div class="d-flex flex-column">
-                                    <span class="h6 text-warning mb-0">@test.TestResults.Count</span>
+                                    <span class="h6 text-warning mb-0">@test.OrthoeopyTestResults.Count</span>
                                     <small class="text-muted">прохождений</small>
                                 </div>
                             </div>
@@ -120,7 +120,7 @@ else
                                     <i class="fas fa-ellipsis-v"></i>
                                 </button>
                                 <ul class="dropdown-menu">
-                                    @if (test.Questions.Any())
+                                    @if (test.OrthoeopyQuestions.Any())
                                     {
                                         <li>
                                             <a class="dropdown-item" href="#">
